# redispp

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Makefile  README.md
src/: client.cpp  server.cpp
src/core/: commands.cpp  commands.hpp  log.cpp  log.hpp  parser.cpp  parser.hpp  storage.cpp  storage.hpp
tests/: CMakeLists.txt  deserialize_test.cpp  serialize_test.cpp
